# repro-matmul-shapes

./: LICENSE  README.md  What-Shapes-Do-Matrix-Multiplications-Like.ipynb  pyproject.toml
output/: NVIDIA-GeForce-RTX-2080-Ti_matmul_tflops.csv  NVIDIA-RTX-6000-Ada-Generation_matmul_tflops.csv  NVIDIA-RTX-A6000_matmul_tflops.csv
