[project]
name = "repro-matmul-shapes"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "triton>=3.4.0",
]

[tool.uv]
package = false
